fix: editable heading css jump

--- a/src/components/EditableHeading/EditableHeading.scss
+++ b/src/components/EditableHeading/EditableHeading.scss
@@ -4,6 +4,7 @@
 .editable-heading--wrapper {
   width: 100%;
   min-width: 0;
+  border: 1px solid transparent;
   &:focus,
   &:active {
     outline: none;
